Hiding navigation items when scrolling, prevents overlap
I don't know why position:fixed wasn't working on mobile, but it wasn't

--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -251,7 +251,7 @@ h1 .hic {
 }
 
 .buttons {
-	position: fixed;
+	position: absolute;
 	left: 10px;
 	bottom: 10px;
 
@@ -259,7 +259,7 @@ h1 .hic {
 }
 
 .navigate {
-	position: fixed;
+	position: absolute;
 	right: 10px;
 	bottom: 10px;
 
